0.1.0 / 2008-12-
==================
* Add support for configurable substitutions for, e.g., application variable 
  use in references

0.0.2 / 2008-12-15
==================
* Resolve CFCs in the same directory as the source

0.0.1 / 2008-12-14
==================
* Fix recursion bug in CaseCheck::exit

0.0.0 / 2008-12-14
==================
* Initial release